[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Material freeway/wallpaperfreeway.png" type="Texture" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://LinhaChegada.tscn" type="PackedScene" id=4]
[ext_resource path="res://Material freeway/sons/tema.wav" type="AudioStream" id=5]
[ext_resource path="res://Material freeway/sons/ponto.wav" type="AudioStream" id=6]
[ext_resource path="res://Material freeway/sons/ganhou.wav" type="AudioStream" id=7]
[ext_resource path="res://Hud.tscn" type="PackedScene" id=8]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Pista" type="Sprite" parent="."]
position = Vector2( 4.4007, -0.375183 )
texture = ExtResource( 2 )
centered = false

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 629.865, 679.647 )

[node name="LinhaChegada" parent="." instance=ExtResource( 4 )]
position = Vector2( 640, 64 )

[node name="TimerCarrosRapidos" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="TimerCarrosLentos" type="Timer" parent="."]
autostart = true

[node name="AudioTema" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="AudioPonto" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="AudioVitoria" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="Hud" parent="." instance=ExtResource( 8 )]

[connection signal="pontua" from="Player" to="." method="_on_Player_pontua"]
[connection signal="timeout" from="TimerCarrosRapidos" to="." method="_on_TimerCarrosRapidos_timeout"]
[connection signal="timeout" from="TimerCarrosLentos" to="." method="_on_TimerCarrosLentos_timeout"]
[connection signal="reinicia" from="Hud" to="." method="_on_Hud_reinicia"]
